added more train operators

--- a/_includes/our_experience.html
+++ b/_includes/our_experience.html
@@ -209,13 +209,166 @@
 				</div>
 				<div class="col-lg-2 col-md-2">
 					<div class="icon text-center">
-						<h3>10.</h3>
+						<h3>11.</h3>
 					</div>
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
 						<p>China Rail（中国铁路）は、中国の国営鉄道会社であり、中国国内や隣接する国々への列車サービスを提供しています。中国の鉄道ネットワークは広範囲にわたり、高速列車（高铁）、普通列車（普速列车）、夜行列車など多くの列車が運行されています。</p>
 						<p>中国の高速列車は非常に速く、主要都市間を短時間で結ぶことができます。例えば、北京から上海への距離を短縮するために、高速列車のG字頭が付いた列車（G字头高铁）が運行されています。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>National Rail</h4>
+						<h5>イギリスの鉄道運行会社の組織</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>12.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>イギリス全土に広がる鉄道ネットワークを運営し、主要都市や地域を結ぶ列車サービスを提供しています。</p>
+						<p>イギリスの鉄道は豊富な路線と多様なサービスを提供しており、長距離列車や近郊列車、高速列車などが運行されています。</p>
+					</div>
+				</div>
+				
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>SJ</h4>
+						<h5>スウェーデンの国営鉄道会社</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>13.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>SJはまた、国際列車も運行しており、他の北欧諸国との接続も容易です。スウェーデンの鉄道は観光だけでなくビジネス目的にも適しており、多くの旅行者にとって魅力的な交通手段となっています。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>BeNeLux</h4>
+						<h5>ベルギー（Belgium）、オランダ（Netherlands）、ルクセンブルク（Luxembourg）3カ国の鉄道ネットワーク</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>14.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>ベルギー、オランダ、ルクセンブルクの3カ国を結ぶ鉄道ネットワークを指します。これらの国は欧州に位置し、地理的に近接しているため、BeNeLux Railとして統合されています。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>Vy</h4>
+						<h5>ヴィ</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>15.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>VY（ヴィ）は、ノルウェーの鉄道事業者で、正式にはVygruppen AS（ヴィグルッペン）として知られています。VYはノルウェー国内に広がる鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
+						<p>ノルウェーは美しい自然と壮大な景色が特徴的な国であり、VYの列車を利用して多様な地域を訪れることができます。VYの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>VR</h4>
+						<h5>フィンランドの国営鉄道会社</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>16.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>フィンランドは美しい自然や四季折々の風景が特徴的な国であり、VRの列車を利用して様々な地域を訪れることができます。VRの列車は快適でモダンな車両が多く、旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>PKP</h4>
+						<h5>Polskie Koleje Państwowe</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>17.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>ポーランドの国営鉄道会社です。PKPはポーランド全土に広がる鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
+						<p>ポーランドは美しい自然と歴史的な遺産が魅力的な国であり、PKPの列車を利用して多様な地域を訪れることができます。PKPの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="single_experience">
+			<div class="row align-items-center">
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_info_box">
+						<h4>RZD</h4>
+						<h5>РЖД</h5>
+						<!-- <h6>March 2007- August 2020</h6> -->
+					</div>
+				</div>
+				<div class="col-lg-2 col-md-2">
+					<div class="icon text-center">
+						<h3>18.</h3>
+					</div>
+				</div>
+				<div class="col-lg-5 col-md-5">
+					<div class="deneb_text_box">
+						<p>RZD（РЖД）は、ロシアの国営鉄道会社で、ロシア鉄道の略称です。RZDはロシア全土に広がる広大な鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
+						<p>ロシアは広大な国土を持ち、多様な地域があります。RZDの列車を利用することで、モスクワからシベリアの遥か東部、黒海のリゾート地、バルト海沿岸など、様々な地域を旅することができます。RZDの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+						<p>RZDは国内の高速列車や地域列車、そして国際列車も運行しており、ロシアの鉄道旅行は多彩な体験を提供しています。また、RZDの列車は定時性が高く、信頼性のあるサービスが評価されています。</p>
 					</div>
 				</div>
 			</div>
