--- a/_includes/workflow.html
+++ b/_includes/workflow.html
@@ -1,6 +1,6 @@
 <!-- Start service_feature -->
 <section class="service_feature">
-<div class="container">
+<!-- <div class="container">
 	<div class="row">
 		<div class="col-lg-12">
 			<div class="section_title text-center">
@@ -71,6 +71,6 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 </section>
 <!-- End deneb_feature -->
