make badge smaller

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -8,7 +8,7 @@
 			<div class="col-lg-12">
 				<div class="section_title text-center">
 					<h2>スクラムコース</h2>
-					<img src="{{relative_url}}/assets/images/services/CEC&CST.jpg" class="icon" alt="Scrum Alliance CEC&CST">
+					<img src="{{relative_url}}/assets/images/services/CEC&CST_400.jpg" class="icon" alt="Scrum Alliance CEC&CST">
 					<p>目覚めの認定スクラムマスターコース（Awakening CSM）では、個人、チーム、および組織の効果を最大化することに焦点を当てています。</p>
 					<p>AHA認定スクラムプロダクトオーナーコース（AHA CSPO）では、極限のイノベーションがどのように機能するか、イノベーションのツール、プロセス、原則に焦点を当てています。</p>
 					<p>BTSスタートアップワークショップは、ビジネス育成、リフトオフ、そしてイテレーションのライフサイクルを経験します。テクノロジー、プロダクトデザイン、運用、ビジネス手法、ビッグデータ分析、学習がビジネスの成長に果たす役割を理解することができます。また、3日間で実際のビジネス製品を実装することで、これらすべてを結び付ける方法を学ぶことができます。</p>
