added badge to about

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -10,6 +10,7 @@
 			<div class="col-lg-7">
 				<div class="deneb_content_box wow fadeInRight">
 					<h2>なぜ私はDanielからScrumコースを受講すべきか？</h2>
+					<img src="{{relative_url}}/assets/images/services/CEC&CST_400.jpg" class="icon" alt="Scrum Alliance CEC&CST">
 					<p>Danielは日本に住んでいる唯一の人物で、スクラムアライアンスのトップトレーナーライセンス（Certified Scrum Trainer、CST）およびコーチライセンス（Certified Enterprise Coach、CEC）を持っています。</p>
 					<p>2Danielは008年以来、中国、台湾、シンガポール、香港、韓国、タイ、ベトナムなど、様々な国のさまざまな産業において、個人、チーム、コミュニティ、そして組織のアジャイル転換の旅を導いてきました。</p>
 					<p>Danielは、実際の製品とビジネス(Xmove)を構築してきた唯一のトレーナー兼コーチです。彼はどんなアイデア、ツール、プロセスについても洞察と反省を共有することが容易であり、革新の効果と効率を促進するためのサポートができます。</p>
