translate home and contact

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,7 +39,7 @@
 					<a href="#" class="close_btn"><i class="fas fa-times"></i></a>
 				</div>
 				<ul class="sidebar-menu">
-					<li class="menu-item"><a href="{{site.url}}">"{{site.data[site.active_lang]['home']}}"</a></li>
+					<li class="menu-item"><a href="{{site.url}}">"{{site.data['home']}}"</a></li>
                     {% for menu in site.data[site.active_lang].navigation %}
 					<li class="menu-item"><a href="{{menu.url}}">{{menu.text}}</a>
 						{% if menu.submenu %}
