translate services.html

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -51,7 +51,7 @@
 						{% endif %}
 					</li>
 					{% endfor %}
-					<li class="menu-item"><a href="contact.html" class="deneb_btn">お問い合わせ</a></li>
+					<li class="menu-item"><a href="contact.html" class="deneb_btn">{{site.data.data.contact}}</a></li>
 				</ul>
 			</div>
 		</div>
