--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -11,8 +11,8 @@
 						<div class="banner_content wow fadeInLeft">
 							<h1>Daniel Teng<br><span>@WoWSei</span></h1>
 							<h5>Awakener</h5>
-							<p>セレンディピティに満ちた旅を始めましょう！</p>
-							<a href="#contact" class="deneb_btn">お問い合わせ</a>
+							<p>{{site.data.data.journey}}</p>
+							<a href="#contact" class="deneb_btn">{{site.data.data.contact}}</a>
 						</div>
 					</div>
 					<div class="col-lg-7">
