--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -12,6 +12,6 @@
 		</li>
        {% endif %}
       {% endfor %}
-      <li class="menu-item"><a href="contact" class="deneb_btn">お問い合わせ</a></li>
+      <li class="menu-item"><a href="contact" class="deneb_btn">{{site.data.data.contact}}</a></li>
     </ul>
 </nav>
