change course title

--- a/_includes/services.html
+++ b/_includes/services.html
@@ -12,6 +12,7 @@
 					<p>{{site.data.data.csm_description}}</p>
 					<img src="{{relative_url}}/assets/images/cspo.png" class="icon" alt="Scrum Alliance CSPO">
 					<p>{{site.data.data.cspo_description}}</p>
+					<img src="{{relative_url}}/assets/images/cspo.png" class="icon" alt="BTS Startup Workshop">
 					<p>{{site.data.data.csm_description}}</p>
 				</div>
 			</div>
