--- a/_includes/services.html
+++ b/_includes/services.html
@@ -27,7 +27,7 @@
 					<div class="info">
 						<h4><a href="{{service.url}}">{{service.title}}</a></h4>
 						<p>{{service.content | strip_html | truncatewords:"10" }}</p>
-						<a href="{{service.url}}" class="link_btn">もっと</a>
+						<a href="{{service.url}}" class="link_btn">{{site.data.data.more}}</a>
 					</div>
 				</div>
 			</div>
