--- a/_includes/hire_us_area.html
+++ b/_includes/hire_us_area.html
@@ -5,13 +5,13 @@
 			<div class="row align-items-center">
 				<div class="col-lg-7">
 					<div class="cta_content">
-						<h3>何かアイデアはありますか?</h3>
-						<p>スクラムアライアンスのCSMコース、CSPOコースについて問い合わせたい。 または旅行事業で協力したい場合</p>
+						<h3>{{site.data.data.any_idea}}</h3>
+						<p>{{site.data.data.idea_area}}</p>
 					</div>
 				</div>
 				<div class="col-lg-5">
 					<div class="button_box">
-						<a href="contact" class="deneb_btn">お問い合わせ</a>
+						<a href="contact" class="deneb_btn">{{site.data.data.contact}}</a>
 					</div>
 				</div>
 			</div>
