--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -4,7 +4,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<div class="section_title text-center">
-			<h2>海外電車とバスの予約ビジネス</h2>
+			<h2>{{site.data.data.train_busines_title}}</h2>
 			<p>私たちは旅行者と旅行代理店がエコフレンドリーで低コストで旅行できるようサポートしています。</p>
 		</div>
 	</div>
