--- a/_includes/achivement.html
+++ b/_includes/achivement.html
@@ -4,13 +4,13 @@
 		<div class="row align-items-center">
 			<div class="col-lg-6  wow fadeInLeft">
 				<div class="section_title">
-					<h2>日本の旅行者が海外でよりエコフレンドリーかつ安く旅行できるようにサポートします。</h2>
+					<h2>{{site.data.data.travel_support}}</h2>
 				</div>
 				<div class="deneb_content_box">
-					<p>日本人が海外に旅行する際、ヨーロッパ全域（ドイツ、イタリア、スイス、フランス、イングランド、スペイン、オーストリア、スウェーデン、フィンランド、ノルウェー、ポーランド、チェコ共和国など）、アジア諸国（韓国、中国、台湾を含む）、アメリカ諸国（アメリカ合衆国、カナダ、ブラジルを含む）の電車、バス、フェリーのチケットを検索して予約することができます。</p>
-					<p>日本の旅行者は日本語を使用して検索や予約ができます。施設やチケットのルールなどの情報も全て日本語で提供されています。</p>
-					<p>日本の出境旅行市場向けに、最も手頃で充実した海外の電車、バス、フェリーのチケットを提供しています。</p>
-					<p>日本から海外への旅行者は、観光名所のチケット、ライブイベントのチケット、ツアーパッケージなどさまざまなチケットを購入することができます。</p>
+					<p>{{site.data.data.train_booking_description_1}}</p>
+					<p>{{site.data.data.train_booking_description_2}}</p>
+					<p>{{site.data.data.train_booking_description_3}}</p>
+					<p>{{site.data.data.train_booking_description_4}}</p>
 				</div>
 			</div>
 			<div class="col-lg-6">
@@ -20,28 +20,28 @@
 							<img src="{{relative_url}}/assets/images/icon_7.png" class="img-fluid" alt="">
 						</div>
 						<h3>60+</h3>
-						<p>国</p>
+						<p>{{site.data.data.countries}}</p>
 					</div>
 					<div class="single_achivment wow fadeInUp"  data-wow-delay=".1s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_8.png" class="img-fluid" alt="">
 						</div>
 						<h3>6,000+</h3>
-						<p>都市と町</p>
+						<p>{{site.data.data.cities}}</p>
 					</div>
 					<div class="single_achivment wow fadeInUp" data-wow-delay=".2s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_9.png" class="img-fluid" alt="">
 						</div>
 						<h3>120,000+</h3>
-						<p>駅</p>
+						<p>{{site.data.data.stations}}</p>
 					</div>
 					<div class="single_achivment wow fadeInUp"  data-wow-delay=".3s">
 						<div class="icon">
 							<img src="{{relative_url}}/assets/images/icon_10.png" class="img-fluid" alt="">
 						</div>
 						<h3>300+</h3>
-						<p>交通事業者</p>
+						<p>{{site.data.data.operators}}</p>
 					</div>
 				</div>
 			</div>
