--- a/_includes/latest_projects.html
+++ b/_includes/latest_projects.html
@@ -28,44 +28,44 @@
 			<div class="single_project cat1 cat5">
 				<div class="grid_item">
 					<div class="deneb_img">
-						<img src="/assets/images/portfolio_1.jpg" class="img-fluid" alt="">
+						<img src="/assets/images/ground_transportation_countries.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
 						<h4><a href="#">{{site.data.data.travel_agency_booking}}</a></h4>
-						<p>Design</p>
+						<!-- <p>Design</p> -->
 					</div>
 				</div>
 			</div>
 			<div class="single_project cat2 cat4">
 				<div class="grid_item">
 					<div class="deneb_img">
-						<img src="/assets/images/portfolio_2.jpg" class="img-fluid" alt="">
+						<img src="/assets/images/trains.png" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
 						<h4><a href="#">{{site.data.data.individual_traveller_booking}}</a></h4>
-						<p>Branding</p>
+						<!-- <p>Branding</p> -->
 					</div>
 				</div>
 			</div>
 			<div class="single_project cat3 cat1">
 				<div class="grid_item">
 					<div class="deneb_img">
-						<img src="/assets/images/portfolio_3.jpg" class="img-fluid" alt="">
+						<img src="/assets/images/api-integration.jpg" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
 						<h4><a href="#">{{site.data.data.api_integration}}</a></h4>
-						<p>Mobile</p>
+						<!-- <p>Mobile</p> -->
 					</div>
 				</div>
 			</div>						
 			<div class="single_project cat1 cat5">
 				<div class="grid_item">
 					<div class="deneb_img">
-						<img src="/assets/images/portfolio_1.jpg" class="img-fluid" alt="">
+						<img src="/assets/images/new schw.png" class="img-fluid" alt="">
 					</div>
 					<div class="deneb_info">
 						<h4><a href="#">{{site.data.data.travel_products}}</a></h4>
-						<p>Design</p>
+						<!-- <p>Design</p> -->
 					</div>
 				</div>
 			</div>
