--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -9,9 +9,9 @@
 				<div class="row align-items-center">
 					<div class="col-lg-5">
 						<div class="banner_content wow fadeInLeft">
-							<h1>Daniel Teng<br><span>@WoWSei</span></h1>
-							<h5>Awakener</h5>
-							<p>{{site.data.data.journey}}</p>
+							<h1><span>{{site.data.data.company}}</span></h1>
+							<!-- <h5>Awakener</h5> -->
+							<p>{{site.data.data.company_slogan}}</p>
 							<a href="#contact" class="deneb_btn">{{site.data.data.contact}}</a>
 						</div>
 					</div>
