--- a/_includes/portfolios.html
+++ b/_includes/portfolios.html
@@ -5,18 +5,18 @@
 	<div class="col-lg-12">
 		<div class="section_title text-center">
 			<h2>{{site.data.data.train_busines_title}}</h2>
-			<p>私たちは旅行者と旅行代理店がエコフレンドリーで低コストで旅行できるようサポートしています。</p>
+			<p>{{site.data.data.travel_support}}</p>
 		</div>
 	</div>
 </div>
 <div class="row">
 	<div class="col-lg-12">
 		<div class="project_button_2 text-center">
-			<button class="project_btn active_btn" data-filter="*">すべて</button>
-			<button class="project_btn" data-filter=".cat1">旅行代理店向けのグループ向け海外電車とバスの予約サービス</button>
-			<button class="project_btn" data-filter=".cat2">個人旅行者向けの海外電車とバスの予約</button>
-			<button class="project_btn" data-filter=".cat3">OTA向け海外電車とバスの検索＆予約API統合</button>
-			<button class="project_btn" data-filter=".cat4">目的地旅行プロダクト</button>
+			<button class="project_btn active_btn" data-filter="*">{{site.data.data.all}}</button>
+			<button class="project_btn" data-filter=".cat1">{{site.data.data.travel_agency_booking}}</button>
+			<button class="project_btn" data-filter=".cat2">{{site.data.data.individual_traveller_booking}}</button>
+			<button class="project_btn" data-filter=".cat3">{{site.data.data.api_integration}}</button>
+			<button class="project_btn" data-filter=".cat4">{{site.data.data.travel_products}}</button>
 			<!-- <button class="project_btn" data-filter=".cat5">Mobile App</button> -->
 		</div>
 	</div>
@@ -25,44 +25,44 @@
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat1">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="../assets/images/portfolio_1.jpg" class="img-fluid" alt="Design & Develop"/>
+				<img src="../assets/images/ground_transportation_countries.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">旅行代理店向けのグループ向け海外電車とバスの予約サービス</a></h4>
-				<p>Design</p>
+				<h4><a href="#">{{site.data.data.travel_agency_booking}}</a></h4>
+				<!-- <p>Design</p> -->
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat2">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="../assets/images/portfolio_2.jpg" class="img-fluid" alt="Product Display"/>
+				<img src="../assets/images/trains.png" class="img-fluid" alt="Product Display"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">個人旅行者向けの海外電車とバスの予約アプリとウェブサイト</a></h4>
-				<p>Design</p>
+				<h4><a href="#">{{site.data.data.individual_traveller_booking}}</a></h4>
+				<!-- <p>Design</p> -->
 			</div>
 		</div>
 	</div>
 	<div class="col-lg-4 col-md-6 col-sm-12 single_project cat3">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="../assets/images/portfolio_3.jpg" class="img-fluid" alt="Design & Develop"/>
+				<img src="../assets/images/api-integration.jpg" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">OTA向け海外電車とバスの検索＆予約API統合</a></h4>
-				<p>Design</p>
+				<h4><a href="#">{{site.data.data.api_integration}}</a></h4>
+				<!-- <p>Design</p> -->
 			</div>
 		</div>
 	</div>
 	 <div class="col-lg-4 col-md-6 col-sm-12 single_project cat4">
 		<div class="grid_item">
 			<div class="deneb_img">
-				<img src="../assets/images/portfolio_4.jpg" class="img-fluid" alt="Design & Develop"/>
+				<img src="../assets/images/new schw.png" class="img-fluid" alt="Design & Develop"/>
 			</div>
 			<div class="deneb_info">
-				<h4><a href="#">目的地旅行プロダクト</a></h4>
-				<p>Design</p>
+				<h4><a href="#">{{site.data.data.travel_products}}</a></h4>
+				<!-- <p>Design</p> -->
 			</div>
 		</div>
 	</div>
