translate about us

--- a/_includes/our_experience.html
+++ b/_includes/our_experience.html
@@ -4,8 +4,8 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="section_title text-center">
-					<h2>電車とバスのパートナー</h2>
-					<p>私たちはほとんどの大陸で主要な電車とバスの運行会社と密接に連携しています。</p>
+					<h2>{{site.data.data.train_partners}}</h2>
+					<p>{{site.data.data.train_partners_description}}</p>
 				</div>
 			</div>
 		</div>
@@ -13,7 +13,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>ドイツの鉄道（DB）は、ドイツ国内をカバーする広範な鉄道ネットワークを提供しています。高速列車や普通列車、地域列車など、さまざまな列車サービスが提供されており、主要都市や観光地を結ぶ便利な移動手段として利用されています。高い安全性と快適さで知られており、観光客やビジネス旅行者にとって便利な交通機関です。</p>
+						<p>{{site.data.data.db_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -24,7 +24,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Deutsche Bahn(DB)</h4>
-						<h5>ドイツの鉄道</h5>
+						<h5>{{site.data.data.db_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -35,7 +35,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Trenitalia</h4>
-						<h5>トレニタリア</h5>
+						<h5>{{site.data.data.trenitalia_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -46,7 +46,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>トレニタリア（Trenitalia）は、イタリアの主要な鉄道運営会社です。トレニタリアはイタリア国内の多くの都市や地域を結ぶ広範な鉄道ネットワークを提供しています。高速列車、普通列車、地域列車など、さまざまな列車サービスが提供されており、旅行者に便利な移動手段として利用されています。トレニタリアの列車は快適で安全性が高く、イタリアを旅行する際に人気の交通機関です。</p>
+						<p>{{site.data.data.trenitalia_description}}</p>
 					</div>
 				</div>
 			</div>
@@ -55,7 +55,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>スイスの鉄道（SBB）は、スイス国内を広範囲にカバーする高度に発達した鉄道システムを有しています。スイスは鉄道網の密度が高く、山々や美しい景色を走る列車が有名です。この鉄道ネットワークは、主要都市や小さな町を結び、観光地やアルプスのリゾート地へのアクセスが容易です。また、スイスの鉄道は正確で信頼性が高く、観光客や地元の人々にとって重要な交通手段として重要な役割を果たしています。</p>
+						<p>{{site.data.data.sbb_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -66,7 +66,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>SBB</h4>
-						<h5>スイス鉄道</h5>
+						<h5>{{site.data.data.sbb_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -77,7 +77,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Flixbus</h4>
-						<h5>フリックスバス</h5>
+						<h5>{{site.data.data.flixbus_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -88,7 +88,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>FlixBus（フリックスバス）は、ヨーロッパだけでなく、アメリカ、カナダ、ブラジル、トルコなど、さまざまな国でも運行しています。ドイツ発祥のこの長距離バス運営会社は、現代的で快適なバスを提供し、多くの主要都市や観光地を結ぶ便利な移動手段として人気を集めています。オンライン予約やアプリを通じて手軽にチケットを購入し、リーズナブルな価格でさまざまな目的地に旅行できます。FlixBusは環境に配慮した運行を重視し、環境に優しい選択肢としても注目されています。</p>
+						<p>{{site.data.data.flixbus_description}}</p>
 					</div>
 				</div>
 			</div>
@@ -97,7 +97,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>イタリアの高速列車サービスを提供する私営の鉄道会社です。イタロはNTV（Nuovo Trasporto Viaggiatori）としても知られ、イタリア国内の主要都市を結ぶ高速列車を運行しています。</p>
+						<p>{{site.data.data.italo_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -108,7 +108,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Italo</h4>
-						<h5></h5>
+						<h5>{{site.data.data.italo_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -119,7 +119,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>SNCF</h4>
-						<h5>フランスの国営鉄道会社</h5>
+						<h5>{{site.data.data.sncf_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -130,7 +130,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>フランス国内や隣接する国々への列車サービスを提供しています。SNCFはフランス全土に広がる鉄道ネットワークを運営し、高速列車（TGV）、地域列車（TER）、近郊列車（Transilien）など多くの列車サービスを提供しています。</p>
+						<p>{{site.data.data.sncf_description}}</p>
 					</div>
 				</div>
 			</div>
@@ -139,7 +139,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>Renfe（レンフェ）はスペインの国営鉄道会社であり、スペイン国内や国際的な列車サービスを提供しています。Renfeはスペイン全土に広がる鉄道ネットワークを運営し、高速列車（AVE）、地域列車、近郊列車など多くの列車サービスを提供しています。</p>
+						<p>{{site.data.data.renfe_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -150,7 +150,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Renfe</h4>
-						<h5>レンフェ</h5>
+						<h5>{{site.data.data.renfe_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -161,7 +161,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>ÖBB</h4>
-						<h5>Österreichische Bundesbahnen</h5>
+						<h5>{{site.data.data.obb_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -172,7 +172,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>ÖBB（Österreichische Bundesbahnen）はオーストリアの国営鉄道会社です。ÖBBはオーストリア国内や隣接する国々への列車サービスを提供しており、高速列車（Railjet）、地域列車（Regionalzug）、近郊列車（S-Bahn）などの列車を運行しています。</p>
+						<p>{{site.data.data.obb_description}}</p>
 					</div>
 				</div>
 			</div>
@@ -181,7 +181,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>Korail（韓国鉄道公社）は、韓国の国営鉄道会社です。Korailは韓国国内の主要都市や地域を結ぶ列車サービスを提供しており、高速列車（KTX）、地域列車（SRT）、ムグンファ号などの列車を運行しています。</p>
+						<p>{{site.data.data.korail_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -192,7 +192,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Korail</h4>
-						<h5>韓国鉄道公社</h5>
+						<h5>{{site.data.data.korail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -203,7 +203,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>China Rail</h4>
-						<h5>中国铁路</h5>
+						<h5>{{site.data.data.china_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -214,8 +214,8 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>China Rail（中国铁路）は、中国の国営鉄道会社であり、中国国内や隣接する国々への列車サービスを提供しています。中国の鉄道ネットワークは広範囲にわたり、高速列車（高铁）、普通列車（普速列车）、夜行列車など多くの列車が運行されています。</p>
-						<p>中国の高速列車は非常に速く、主要都市間を短時間で結ぶことができます。例えば、北京から上海への距離を短縮するために、高速列車のG字頭が付いた列車（G字头高铁）が運行されています。</p>
+						<p>{{site.data.data.china_rail_description_1}}</p>
+						<p>{{site.data.data.china_rail_description_2}}</p>
 					</div>
 				</div>
 			</div>
@@ -224,8 +224,8 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>イギリス全土に広がる鉄道ネットワークを運営し、主要都市や地域を結ぶ列車サービスを提供しています。</p>
-						<p>イギリスの鉄道は豊富な路線と多様なサービスを提供しており、長距離列車や近郊列車、高速列車などが運行されています。</p>
+						<p>{{site.data.data.national_rail_description_1}}</p>
+						<p>{{site.data.data.national_rail_description_2}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -236,7 +236,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>National Rail</h4>
-						<h5>イギリスの鉄道運行会社の組織</h5>
+						<h5>{{site.data.data.national_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -247,7 +247,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>SJ</h4>
-						<h5>スウェーデンの国営鉄道会社</h5>
+						<h5>{{site.data.data.sweden_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -258,7 +258,7 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>SJはまた、国際列車も運行しており、他の北欧諸国との接続も容易です。スウェーデンの鉄道は観光だけでなくビジネス目的にも適しており、多くの旅行者にとって魅力的な交通手段となっています。</p>
+						<p>{{site.data.data.sweden_rail_description}}</p>
 					</div>
 				</div>
 			</div>
@@ -267,7 +267,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>ベルギー、オランダ、ルクセンブルクの3カ国を結ぶ鉄道ネットワークを指します。これらの国は欧州に位置し、地理的に近接しているため、BeNeLux Railとして統合されています。</p>
+						<p>{{site.data.data.benelux_rail_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -278,7 +278,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>BeNeLux</h4>
-						<h5>ベルギー（Belgium）、オランダ（Netherlands）、ルクセンブルク（Luxembourg）3カ国の鉄道ネットワーク</h5>
+						<h5>{{site.data.data.benelux_rail_description}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -289,7 +289,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>Vy</h4>
-						<h5>ヴィ</h5>
+						<h5>{{site.data.data.vy_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -300,8 +300,8 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>VY（ヴィ）は、ノルウェーの鉄道事業者で、正式にはVygruppen AS（ヴィグルッペン）として知られています。VYはノルウェー国内に広がる鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
-						<p>ノルウェーは美しい自然と壮大な景色が特徴的な国であり、VYの列車を利用して多様な地域を訪れることができます。VYの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+						<p>{{site.data.data.vy_rail_description_1}}</p>
+						<p>{{site.data.data.vy_rail_description_2}}</p>
 					</div>
 				</div>
 			</div>
@@ -310,7 +310,7 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>フィンランドは美しい自然や四季折々の風景が特徴的な国であり、VRの列車を利用して様々な地域を訪れることができます。VRの列車は快適でモダンな車両が多く、旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+						<p>{{site.data.data.vr_rail_description}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -321,7 +321,7 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
 						<h4>VR</h4>
-						<h5>フィンランドの国営鉄道会社</h5>
+						<h5>{{site.data.data.vr_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -332,8 +332,8 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
-						<h4>PKP</h4>
-						<h5>Polskie Koleje Państwowe</h5>
+						<h4>PKP (Polskie Koleje Państwowe)</h4>
+						<h5>{{site.data.data.poland_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
@@ -344,8 +344,8 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>ポーランドの国営鉄道会社です。PKPはポーランド全土に広がる鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
-						<p>ポーランドは美しい自然と歴史的な遺産が魅力的な国であり、PKPの列車を利用して多様な地域を訪れることができます。PKPの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
+						<p>{{site.data.data.poland_rail_description_1}}</p>
+						<p>{{site.data.data.poland_rail_description_2}}</p>
 					</div>
 				</div>
 			</div>
@@ -354,9 +354,9 @@
 			<div class="row align-items-center">
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_text_box">
-						<p>RZD（РЖД）は、ロシアの国営鉄道会社で、ロシア鉄道の略称です。RZDはロシア全土に広がる広大な鉄道ネットワークを運営しており、主要都市や地域を結ぶ列車サービスを提供しています。</p>
-						<p>ロシアは広大な国土を持ち、多様な地域があります。RZDの列車を利用することで、モスクワからシベリアの遥か東部、黒海のリゾート地、バルト海沿岸など、様々な地域を旅することができます。RZDの列車は快適でモダンな車両が多く、観光旅行者にとって便利で魅力的な移動手段として人気があります。</p>
-						<p>RZDは国内の高速列車や地域列車、そして国際列車も運行しており、ロシアの鉄道旅行は多彩な体験を提供しています。また、RZDの列車は定時性が高く、信頼性のあるサービスが評価されています。</p>
+						<p>{{site.data.data.russia_rail_description_1}}</p>
+						<p>{{site.data.data.russia_rail_description_2}}</p>
+						<p>{{site.data.data.russia_rail_description_3}}</p>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-2">
@@ -366,8 +366,8 @@
 				</div>
 				<div class="col-lg-5 col-md-5">
 					<div class="deneb_info_box">
-						<h4>RZD</h4>
-						<h5>РЖД</h5>
+						<h4> RZD（РЖД）</h4>
+						<h5>{{site.data.data.russia_rail_title}}</h5>
 						<!-- <h6>March 2007- August 2020</h6> -->
 					</div>
 				</div>
