--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -4,10 +4,26 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="breadcrumb_content">
-					<h1>{{page.title}}</h1>
+					{% if page.url contains 'individual_traveller' %}
+						<h1>{{site.data.data.individual_traveller_booking}}</h1>
+					{% elsif page.url contains 'travel_agency' %}
+						<h1>{{site.data.data.travel_agency_booking}}</h1>
+					{% elsif page.url contains '/portfolios/api' %}
+						<h1>{{site.data.data.api_integration}}</h1>
+					{% else %}
+						<h1>{{page.title}}</h1>
+					{% endif %}
 					<ul class="mt-3">
 						<li><a href="{{site.url}}">{{site.data.data.home}}</a></li>
-						<li>{{page.title}}</li>
+						{% if page.url contains 'individual_traveller' %}
+							<li>{{site.data.data.individual_traveller_booking}}</li>
+						{% elsif page.url contains 'travel_agency' %}
+							<li>{{site.data.data.travel_agency_booking}}</li>
+						{% elsif page.url contains '/portfolios/api' %}
+							<li>{{site.data.data.api_integration}}</li>
+						{% else %}
+							<li>{{page.title}}</li>
+						{% endif %}
 					</ul>
 				</div>
 			</div>
