--- a/_includes/page_header.html
+++ b/_includes/page_header.html
@@ -12,6 +12,8 @@
 						<h1>{{site.data.data.api_integration}}</h1>
 					{% elsif page.url == '/portfolios/' or page.url == '/portfolios' or page.url == '/ja/portfolios/' or page.url == '/ja/portfolios' %}
 						<h1>{{site.data.data.train_busines_title}}</h1>
+					{% elsif page.url contains '/about' %}
+						<h1>{{site.data.data.about_us}}</h1>
 					{% else %}
 						<h1>{{page.title}}</h1>
 					{% endif %}
@@ -25,6 +27,8 @@
 							<li>{{site.data.data.api_integration}}</li>
 						{% elsif page.url == '/portfolios/' or page.url == '/portfolios' or page.url == '/ja/portfolios/' or page.url == '/ja/portfolios' %}
 							<li>{{site.data.data.train_busines_title}}</li>
+						{% elsif page.url contains '/about' %}
+							<li>{{site.data.data.about_us}}</li>
 						{% else %}
 							<li>{{page.title}}</li>
 						{% endif %}
